# DocIntelAI

./: README.md  Untitled-1.ipynb  crewai_flow.html  ingramdocai.db  pyproject.toml
ingramdocai/: .gitignore  LICENSE  main.py
ingramdocai/core/: crewai_output_normalizer.py  logger.py  state.py
ingramdocai/crews/: query_agent.py  state.py  status_request_agent.py
ingramdocai/crews/document_analysis/: document_analysis.py  document_analysis_output.py
ingramdocai/crews/document_analysis/config/: agents.yaml  tasks.yaml
ingramdocai/persistence/: db.py  models.py
ingramdocai/scripts/: init_db.py
ingramdocai/services/: database.py  document_processing_service.py  document_upsert_embedding.py  weaviate_class_manager.py  weaviate_client.py  weaviate_document_schema.py
ingramdocai/tools/: get_chunk_tool.py  save_session_record.py  status.py  system_clock.py
tests/sample_docs/: test_contract.txt
